--- a/src/Components/Currency/css/index.css
+++ b/src/Components/Currency/css/index.css
@@ -98,9 +98,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -134,11 +134,17 @@
   .accordion_container .crypto_container .crypto_price p {
     font-size: 1.8rem;
   }
+  .accordion_container .data_container .data_inner_container {
+    width: 80%;
+    grid-template-columns: auto auto;
+  }
+  .accordion_container .data_container .data_inner_container .datas h3 {
+    font-size: 1.8rem;
+  }
 }
 @media screen and (min-width: 992px) {
   .accordion_container .crypto_container {
     width: 60%;
-    height: 70px;
   }
   .accordion_container .crypto_container .crypto_name h2 {
     font-size: 2.5rem;
@@ -149,25 +155,24 @@
     margin-left: 10px;
   }
   .accordion_container .crypto_container .crypto_price {
-    width: 20%;
     margin-right: 20px;
   }
   .accordion_container .crypto_container .crypto_price p {
     font-size: 2rem;
   }
-  .data_container {
+  .accordion_container .data_container {
     width: 100%;
     height: 100px;
   }
-  .data_container .data_inner_container {
+  .accordion_container .data_container .data_inner_container {
     width: 60%;
     height: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-  .data_container .data_inner_container .datas h3 {
+  .accordion_container .data_container .data_inner_container .datas h3 {
     font-size: 2rem;
   }
-  .data_container .data_inner_container .datas p {
+  .accordion_container .data_container .data_inner_container .datas p {
     font-size: 1.5rem;
   }
 }
