--- a/src/Components/Currency/index.scss
+++ b/src/Components/Currency/index.scss
@@ -67,7 +67,7 @@
       .datas {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
 
         h3 {
@@ -106,6 +106,17 @@
         }
       }
     }
+    .data_container {
+      .data_inner_container {
+        width: 80%;
+        grid-template-columns: auto auto;
+        .datas {
+          h3 {
+            font-size: 1.8rem;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -113,7 +124,6 @@
   .accordion_container {
     .crypto_container {
       width: 60%;
-      height: 70px;
 
       .crypto_name {
         h2 {
@@ -126,29 +136,28 @@
         }
       }
       .crypto_price {
-        width: 20%;
         margin-right: 20px;
         p {
           font-size: 2rem;
         }
       }
     }
-  }
-  .data_container {
-    width: 100%;
-    height: 100px;
-
-    .data_inner_container {
-      width: 60%;
-      height: 100%;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-
-      .datas {
-        h3 {
-          font-size: 2rem;
-        }
-        p {
-          font-size: 1.5rem;
+    .data_container {
+      width: 100%;
+      height: 100px;
+  
+      .data_inner_container {
+        width: 60%;
+        height: 100%;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+  
+        .datas {
+          h3 {
+            font-size: 2rem;
+          }
+          p {
+            font-size: 1.5rem;
+          }
         }
       }
     }
