--- a/src/Components/GlobalData/css/index.css
+++ b/src/Components/GlobalData/css/index.css
@@ -4,14 +4,14 @@
   margin: 15px auto;
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  color: #E8EEF2;
+  color: #e8eef2;
 }
 
 .globaldata_container {
   width: 100%;
   height: 90vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: auto;
   gap: 20px;
   justify-items: center;
   -webkit-box-align: baseline;
@@ -21,10 +21,10 @@
   color: black;
 }
 .globaldata_container .gdatas {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border-radius: 4px;
-  background-color: #E8EEF2;
+  background-color: #e8eef2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,8 +38,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
-          box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+  -webkit-box-shadow: 5px -2px 10px 2px rgba(232, 238, 242, 0.2980392157);
+          box-shadow: 5px -2px 10px 2px rgba(232, 238, 242, 0.2980392157);
 }
 .globaldata_container .gdatas h3 {
   font-size: 2.3rem;
@@ -48,6 +48,24 @@
   margin: 10px auto;
 }
 .globaldata_container .gdatas p {
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   font-weight: 500;
+}
+
+@media screen and (min-width: 992px) {
+  .globaldata_container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .globaldata_container .gdatas {
+    width: 300px;
+    height: 300px;
+    -webkit-box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+            box-shadow: 10px -2px 20px 2px rgba(232, 238, 242, 0.2980392157);
+  }
+  .globaldata_container .gdatas h3 {
+    font-size: 2rem;
+  }
+  .globaldata_container .gdatas p {
+    font-size: 1.9rem;
+  }
 }
