--- a/src/Components/GlobalData/index.scss
+++ b/src/Components/GlobalData/index.scss
@@ -4,13 +4,13 @@
   margin: 15px auto;
   text-transform: uppercase;
   letter-spacing: 1.2px;
-  color: #E8EEF2;
-};
+  color: #e8eef2;
+}
 .globaldata_container {
   width: 100%;
   height: 90vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: auto;
   gap: 20px;
   justify-items: center;
   align-items: baseline;
@@ -18,15 +18,15 @@
   color: black;
 
   .gdatas {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border-radius: 4px;
-    background-color: #E8EEF2;  
+    background-color: #e8eef2;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 10px -2px 20px 2px #e8eef24c;
+    box-shadow: 5px -2px 10px 2px #e8eef24c;
 
     h3 {
       font-size: 2.3rem;
@@ -35,8 +35,27 @@
       margin: 10px auto;
     }
     p {
-      font-size: 1.9rem;
+      font-size: 1.5rem;
       font-weight: 500;
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .globaldata_container {
+    grid-template-columns: 1fr 1fr 1fr;
+
+    .gdatas {
+      width: 300px;
+      height: 300px;
+      box-shadow: 10px -2px 20px 2px #e8eef24c;
+
+      h3 {
+        font-size: 2rem;
+      }
+      p {
+        font-size: 1.9rem;
+      }
     }
   }
 }
