--- a/src/Components/MenuNav/css/index.css
+++ b/src/Components/MenuNav/css/index.css
@@ -4,15 +4,42 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: black;
 }
-.navbar .nav_link {
+.navbar .logo {
+  color: #E8EEF2;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.navbar nav {
+  width: 100%;
+  height: 400px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.856);
+  z-index: 2;
+}
+.navbar nav .nav_link {
   text-decoration: none;
   color: #E8EEF2;
   margin: 15px;
@@ -22,16 +49,68 @@
   -webkit-transition: color 0.2s ease-in;
   transition: color 0.2s ease-in;
 }
-.navbar .nav_link:hover {
+.navbar nav .nav_link:hover {
   color: #FEC601;
 }
-.navbar .nav_link:active {
+.navbar nav .nav_link:active {
   color: #FEC601;
 }
-.navbar .nav_link:visited {
+.navbar nav .nav_link:visited {
   color: none;
 }
+.navbar .hamburger_icon {
+  color: #E8EEF2;
+  font-size: 2rem;
+  margin-left: 20px;
+}
 
-.navbar:last-child {
-  justify-items: flex-end;
+@media screen and (min-width: 992px) {
+  .navbar {
+    width: 100%;
+    height: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: black;
+  }
+  .navbar .logo {
+    color: #E8EEF2;
+  }
+  .navbar nav {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .navbar nav .nav_link {
+    text-decoration: none;
+    color: #E8EEF2;
+    margin: 15px;
+    font-size: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    -webkit-transition: color 0.2s ease-in;
+    transition: color 0.2s ease-in;
+  }
+  .navbar nav .nav_link:hover {
+    color: #FEC601;
+  }
+  .navbar nav .nav_link:active {
+    color: #FEC601;
+  }
+  .navbar nav .nav_link:visited {
+    color: none;
+  }
+  .navbar .navbar:last-child {
+    justify-items: flex-end;
+  }
 }
