--- a/src/Components/MenuNav/index.scss
+++ b/src/Components/MenuNav/index.scss
@@ -2,30 +2,91 @@
   width: 100%;
   height: 60px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   background-color: black;
 
-  .nav_link {
-    text-decoration: none;
+  .logo {
     color: #E8EEF2;
-    margin: 15px;
     font-size: 2rem;
-    font-weight: 500;
     text-transform: uppercase;
-    transition: color 0.2s ease-in;
   }
-  .nav_link:hover {
-    color: #FEC601;
-    //text-shadow: 1px 0px 1px white;
+  nav {
+    width: 100%;
+    height: 400px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.856);
+    z-index: 2;
+    .nav_link {
+      text-decoration: none;
+      color: #E8EEF2;
+      margin: 15px;
+      font-size: 2rem;
+      font-weight: 500;
+      text-transform: uppercase;
+      transition: color 0.2s ease-in;
+    }
+    .nav_link:hover {
+      color: #FEC601;
+      //text-shadow: 1px 0px 1px white;
+    }
+    .nav_link:active {
+      color: #FEC601;
+    }
+    .nav_link:visited {
+      color: none;
+    }
   }
-  .nav_link:active {
-    color: #FEC601;
+  .hamburger_icon {
+    color: #E8EEF2;
+    font-size: 2rem;
+    margin-left: 20px;
   }
-  .nav_link:visited {
-    color: none;
   }
-}
-.navbar:last-child {
-  justify-items: flex-end;
-}
+  
+  @media screen and (min-width: 992px){
+    .navbar {
+      width: 100%;
+      height: 60px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      background-color: black;
+    
+      .logo {
+        color: #E8EEF2;
+      }
+      nav {
+        justify-content: flex-end;
+        flex-direction: row;
+        .nav_link {
+          text-decoration: none;
+          color: #E8EEF2;
+          margin: 15px;
+          font-size: 2rem;
+          font-weight: 500;
+          text-transform: uppercase;
+          transition: color 0.2s ease-in;
+        }
+        .nav_link:hover {
+          color: #FEC601;
+          //text-shadow: 1px 0px 1px white;
+        }
+        .nav_link:active {
+          color: #FEC601;
+        }
+        .nav_link:visited {
+          color: none;
+        }
+      }
+      .navbar:last-child {
+        justify-items: flex-end;
+      }
+      }
+  }
