--- a/src/Components/MenuNav/css/index.css
+++ b/src/Components/MenuNav/css/index.css
@@ -13,13 +13,18 @@
   background-color: black;
 }
 .navbar .logo {
+  display: block;
   color: #E8EEF2;
   font-size: 2rem;
   text-transform: uppercase;
+  margin-left: 20px;
 }
 .navbar nav {
+  display: none;
+}
+.navbar nav.navbar-visible {
   width: 100%;
-  height: 400px;
+  height: 300px;
   position: fixed;
   top: 0;
   left: 0;
@@ -39,7 +44,7 @@
   background-color: rgba(0, 0, 0, 0.856);
   z-index: 2;
 }
-.navbar nav .nav_link {
+.navbar nav.navbar-visible .nav_link {
   text-decoration: none;
   color: #E8EEF2;
   margin: 15px;
@@ -49,19 +54,26 @@
   -webkit-transition: color 0.2s ease-in;
   transition: color 0.2s ease-in;
 }
-.navbar nav .nav_link:hover {
+.navbar nav.navbar-visible .nav_link:hover {
   color: #FEC601;
 }
-.navbar nav .nav_link:active {
+.navbar nav.navbar-visible .nav_link:active {
   color: #FEC601;
 }
-.navbar nav .nav_link:visited {
+.navbar nav.navbar-visible .nav_link:visited {
   color: none;
 }
 .navbar .hamburger_icon {
+  display: block;
   color: #E8EEF2;
   font-size: 2rem;
-  margin-left: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+.navbar .hamburger_icon:hover {
+  color: #FEC601;
 }
 
 @media screen and (min-width: 992px) {
@@ -71,9 +83,9 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -83,6 +95,9 @@
     color: #E8EEF2;
   }
   .navbar nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
@@ -110,7 +125,7 @@
   .navbar nav .nav_link:visited {
     color: none;
   }
-  .navbar .navbar:last-child {
-    justify-items: flex-end;
+  .navbar .hamburger_icon {
+    display: none;
   }
 }
