--- a/src/Components/MenuNav/index.scss
+++ b/src/Components/MenuNav/index.scss
@@ -7,46 +7,57 @@
   background-color: black;
 
   .logo {
+    display: block;
     color: #E8EEF2;
     font-size: 2rem;
     text-transform: uppercase;
+    margin-left: 20px;
   }
   nav {
-    width: 100%;
-    height: 400px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.856);
-    z-index: 2;
-    .nav_link {
-      text-decoration: none;
-      color: #E8EEF2;
-      margin: 15px;
-      font-size: 2rem;
-      font-weight: 500;
-      text-transform: uppercase;
-      transition: color 0.2s ease-in;
-    }
-    .nav_link:hover {
-      color: #FEC601;
-      //text-shadow: 1px 0px 1px white;
-    }
-    .nav_link:active {
-      color: #FEC601;
-    }
-    .nav_link:visited {
-      color: none;
-    }
+    display: none;
+    &.navbar-visible {
+      width: 100%;
+      height: 300px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.856);
+      z-index: 2;
+      .nav_link {
+        text-decoration: none;
+        color: #E8EEF2;
+        margin: 15px;
+        font-size: 2rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        transition: color 0.2s ease-in;
+      }
+      .nav_link:hover {
+        color: #FEC601;
+      }
+      .nav_link:active {
+        color: #FEC601;
+      }
+      .nav_link:visited {
+        color: none;
+      }
+  }
+  
   }
   .hamburger_icon {
+    display: block;
     color: #E8EEF2;
     font-size: 2rem;
-    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: color 0.2s ease-in;
+  }
+  .hamburger_icon:hover {
+    color: #FEC601;
   }
   }
   
@@ -55,7 +66,7 @@
       width: 100%;
       height: 60px;
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
       background-color: black;
     
@@ -63,6 +74,7 @@
         color: #E8EEF2;
       }
       nav {
+        display: flex;
         justify-content: flex-end;
         flex-direction: row;
         .nav_link {
@@ -85,8 +97,8 @@
           color: none;
         }
       }
-      .navbar:last-child {
-        justify-items: flex-end;
+      .hamburger_icon {
+        display: none;
       }
       }
   }
